# firefam-cli

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  LICENSE  MODULE.bazel  NOTICE  README.md  SECURITY.md  announcement_tip.toml  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbe.bzl  workspace_root_test_launcher.bat.tpl  workspace_root_test_launcher.sh.tpl
firefam-rs/agent-graph-store/: BUILD.bazel  Cargo.toml
firefam-rs/agent-graph-store/src/: local.rs  store.rs
firefam-rs/analytics/: BUILD.bazel  Cargo.toml
firefam-rs/analytics/src/: accepted_lines.rs  analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
firefam-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
firefam-rs/app-server-client/: BUILD.bazel  Cargo.toml  README.md
firefam-rs/app-server-client/src/: lib.rs  remote.rs
firefam-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
firefam-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs
firefam-rs/app-server-protocol/tests/: schema_fixtures.rs
firefam-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
firefam-rs/app-server-test-client/scripts/: live_elicitation_hold.sh
firefam-rs/app-server-test-client/src/: lib.rs  main.rs
firefam-rs/app-server-transport/: BUILD.bazel  Cargo.toml
firefam-rs/app-server-transport/src/: outgoing_message.rs
firefam-rs/app-server/src/: analytics_utils.rs  app_server_tracing.rs  attestation.rs  bespoke_event_handling.rs  command_exec.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  dynamic_tools.rs  error_code.rs  extensions.rs  filters.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
firefam-rs/apply-patch/: BUILD.bazel  Cargo.toml
firefam-rs/apply-patch/src/: invocation.rs  lib.rs  main.rs  parser.rs  standalone_executable.rs  streaming_parser.rs
firefam-rs/arg0/: BUILD.bazel  Cargo.toml
firefam-rs/arg0/src/: lib.rs
firefam-rs/backend-client/: BUILD.bazel  Cargo.toml
firefam-rs/backend-client/src/: client.rs  types.rs
firefam-rs/chatgpt/: BUILD.bazel  Cargo.toml  README.md
firefam-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  connectors.rs  get_task.rs  workspace_settings.rs
firefam-rs/chatgpt/tests/: task_turn_fixture.json
firefam-rs/cli/: BUILD.bazel  Cargo.toml
firefam-rs/cli/src/: app_cmd.rs  debug_sandbox.rs  doctor.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  remote_control_cmd.rs  state_db_recovery.rs  wsl_paths.rs
firefam-rs/cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  plugin_cli.rs  update.rs
firefam-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
firefam-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
firefam-rs/cloud-tasks-client/src/: http.rs
firefam-rs/cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
firefam-rs/cloud-tasks-mock-client/src/: mock.rs
firefam-rs/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  ui.rs  util.rs
firefam-rs/cloud-tasks/tests/: env_filter.rs
firefam-rs/collaboration-mode-templates/: BUILD.bazel  Cargo.toml
firefam-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt_5_1_prompt.md  gpt_5_codex_prompt.md  prompt_with_apply_patch_instructions.md
firefam-rs/core-api/: BUILD.bazel  Cargo.toml
firefam-rs/core-api/src/: lib.rs
firefam-rs/core-plugins/: BUILD.bazel  Cargo.toml
firefam-rs/core-plugins/src/: installed_marketplaces.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  manifest.rs  marketplace.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_tests.rs  marketplace_upgrade.rs  remote.rs  remote_bundle.rs  remote_legacy.rs  startup_remote_sync.rs  startup_remote_sync_tests.rs  startup_sync.rs  startup_sync_tests.rs  store.rs  store_tests.rs  test_support.rs
firefam-rs/core-skills/: BUILD.bazel  Cargo.toml
firefam-rs/core-skills/src/: config_rules.rs  injection.rs  injection_tests.rs  invocation_utils.rs  invocation_utils_tests.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  mention_counts.rs  model.rs  remote.rs  render.rs  system.rs
firefam-rs/core/src/: agents_md.rs  agents_md_tests.rs  apply_patch.rs  attestation.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  command_canonicalization.rs  command_canonicalization_tests.rs  compact.rs  compact_remote.rs  compact_remote_v2.rs  compact_tests.rs  config_lock.rs  connectors.rs  connectors_tests.rs  consequential_tool_message_templates.json  environment_selection.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_env.rs  exec_env_tests.rs  exec_policy.rs  exec_policy_tests.rs  exec_tests.rs  firefam_delegate.rs  firefam_delegate_tests.rs  firefam_thread.rs  function_tool.rs  git_info_tests.rs  goals.rs  hook_runtime.rs  installation_id.rs  landlock.rs  lib.rs  mcp.rs  mcp_firefamai_file.rs  mcp_skill_dependencies.rs  (+58 more)
firefam-rs/core/tests/: all.rs  responses_headers.rs
firefam-rs/debug-client/: Cargo.toml  README.md
firefam-rs/debug-client/src/: client.rs  main.rs  output.rs  reader.rs  state.rs
firefam-rs/exec/: BUILD.bazel  Cargo.toml
firefam-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
firefam-rs/exec-server/src/: client.rs  client_transport.rs  connection.rs  environment.rs  environment_provider.rs  environment_toml.rs  fs_helper.rs  lib.rs  (+11 more)
firefam-rs/execpolicy/: BUILD.bazel  Cargo.toml  README.md
firefam-rs/external-agent-sessions/: BUILD.bazel  Cargo.toml
firefam-rs/features/: BUILD.bazel  Cargo.toml
firefam-rs/firefam-mcp/: BUILD.bazel  Cargo.toml
(+2528 files in other folders)
