[package]
edition.workspace = true
license.workspace = true
name = "firefam-agent-graph-store"
version.workspace = true

[lib]
name = "firefam_agent_graph_store"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
firefam-protocol = { workspace = true }
firefam-state = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
