[package]
edition.workspace = true
license.workspace = true
name = "firefam-analytics"
version.workspace = true

[lib]
doctest = false
name = "firefam_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
firefam-app-server-protocol = { workspace = true }
firefam-git-utils = { workspace = true }
firefam-login = { workspace = true }
firefam-model-provider = { workspace = true }
firefam-plugin = { workspace = true }
firefam-protocol = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
firefam-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
