[package]
name = "firefam-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "firefam_app_server_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
firefam-app-server = { workspace = true }
firefam-app-server-protocol = { workspace = true }
firefam-arg0 = { workspace = true }
firefam-config = { workspace = true }
firefam-core = { workspace = true }
firefam-exec-server = { workspace = true }
firefam-feedback = { workspace = true }
firefam-protocol = { workspace = true }
firefam-uds = { workspace = true }
firefam-utils-absolute-path = { workspace = true }
firefam-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
