[package]
name = "firefam-app-server-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "firefam_app_server_transport"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
firefam-api = { workspace = true }
firefam-app-server-protocol = { workspace = true }
firefam-core = { workspace = true }
firefam-login = { workspace = true }
firefam-model-provider = { workspace = true }
firefam-state = { workspace = true }
firefam-uds = { workspace = true }
firefam-utils-absolute-path = { workspace = true }
firefam-utils-rustls-provider = { workspace = true }
constant_time_eq = { workspace = true }
futures = { workspace = true }
gethostname = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
chrono = { workspace = true }
firefam-config = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
