[package]
name = "firefam-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
firefam-backend-openapi-models = { path = "../firefam-backend-openapi-models" }
firefam-api = { workspace = true }
firefam-client = { workspace = true }
firefam-login = { workspace = true }
firefam-model-provider = { workspace = true }
firefam-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
