[package]
name = "firefam-chatgpt"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
firefam-app-server-protocol = { workspace = true }
firefam-connectors = { workspace = true }
firefam-core = { workspace = true }
firefam-core-plugins = { workspace = true }
firefam-login = { workspace = true }
firefam-model-provider = { workspace = true }
firefam-plugin = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
doctest = false
