[package]
edition.workspace = true
license.workspace = true
name = "firefam-cloud-tasks"
version.workspace = true

[lib]
name = "firefam_cloud_tasks"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
firefam-client = { workspace = true }
firefam-cloud-tasks-client = { workspace = true }
# TODO: firefam-cloud-tasks-mock-client should be in dev-dependencies.
firefam-cloud-tasks-mock-client = { workspace = true }
firefam-core = { workspace = true }
firefam-git-utils = { workspace = true }
firefam-login = { path = "../login" }
firefam-model-provider = { workspace = true }
firefam-tui = { workspace = true }
firefam-utils-cli = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }

[dependencies.async-trait]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
