load("//:defs.bzl", "firefam_rust_crate")

firefam_rust_crate(
    name = "collaboration-mode-templates",
    crate_name = "firefam_collaboration_mode_templates",
    compile_data = glob(["templates/*.md"]),
)

exports_files(
    glob(["templates/*.md"]),
    visibility = ["//visibility:public"],
)
