load("//:defs.bzl", "firefam_rust_crate")

firefam_rust_crate(
    name = "core-skills",
    crate_name = "firefam_core_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
