[package]
edition.workspace = true
license.workspace = true
name = "firefam-core-skills"
version.workspace = true

[lib]
doctest = false
name = "firefam_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
firefam-analytics = { workspace = true }
firefam-app-server-protocol = { workspace = true }
firefam-config = { workspace = true }
firefam-exec-server = { workspace = true }
firefam-login = { workspace = true }
firefam-model-provider = { workspace = true }
firefam-otel = { workspace = true }
firefam-protocol = { workspace = true }
firefam-skills = { workspace = true }
firefam-utils-absolute-path = { workspace = true }
firefam-utils-output-truncation = { workspace = true }
firefam-utils-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
