load("//:defs.bzl", "firefam_rust_crate")

firefam_rust_crate(
    name = "exec-server",
    crate_name = "firefam_exec_server",
    deps_extra = [
        "@crates//:toml",
    ],
    # Keep the crate's integration tests single-threaded under Bazel because
    # they install process-global test-binary dispatch state, and the remote
    # exec-server cases already rely on serialization around the full CLI path.
    integration_test_args = ["--test-threads=1"],
    integration_compile_data_extra = [
        "src/proto/firefam.exec_server.relay.v1.rs",
    ],
    extra_binaries = [
        "//firefam-rs/bwrap:bwrap",
    ],
    test_tags = ["no-sandbox"],
)
