[package]
name = "firefam-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "firefam-exec"
path = "src/main.rs"

[lib]
name = "firefam_exec"
path = "src/lib.rs"
doctest = false

[[test]]
name = "all"
path = "tests/all.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
firefam-arg0 = { workspace = true }
firefam-app-server-client = { workspace = true }
firefam-app-server-protocol = { workspace = true }
firefam-cloud-requirements = { workspace = true }
firefam-config = { workspace = true }
firefam-core = { workspace = true }
firefam-feedback = { workspace = true }
firefam-git-utils = { workspace = true }
firefam-login = { workspace = true }
firefam-model-provider-info = { workspace = true }
firefam-otel = { workspace = true }
firefam-protocol = { workspace = true }
firefam-utils-absolute-path = { workspace = true }
firefam-utils-cli = { workspace = true }
firefam-utils-oss = { workspace = true }
firefam-utils-sandbox-summary = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
firefam-apply-patch = { workspace = true }
firefam-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
