[package]
name = "firefam-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Firefam exec policy: prefix-based Starlark rules for command decisions."

[lib]
name = "firefam_execpolicy"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "firefam-execpolicy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
firefam-utils-absolute-path = { workspace = true }
multimap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
starlark = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
