[package]
edition.workspace = true
license.workspace = true
name = "firefam-features"
version.workspace = true

[lib]
doctest = false
name = "firefam_features"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
firefam-otel = { workspace = true }
firefam-protocol = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
