[package]
edition.workspace = true
license.workspace = true
name = "firefam-mcp"
version.workspace = true

[lib]
name = "firefam_mcp"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
firefam-async-utils = { workspace = true }
firefam-api = { workspace = true }
firefam-config = { workspace = true }
firefam-exec-server = { workspace = true }
firefam-login = { workspace = true }
firefam-model-provider = { workspace = true }
firefam-otel = { workspace = true }
firefam-plugin = { workspace = true }
firefam-protocol = { workspace = true }
firefam-rmcp-client = { workspace = true }
firefam-utils-plugins = { workspace = true }
futures = { workspace = true }
regex-lite = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
tempfile = { workspace = true }
